--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Welcome to Vue</title>
+  <title>Shikaku Solver by Klemek</title>
   <script src=""></script>
   <link rel="stylesheet" type="text/css" href="style.css"/>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
